optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_default_export_index.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---


import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});


============================= src/components/mongo/index.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    return <div on:click={/*#__PURE__*/ inlinedQrl(()=>console.log(mongodb), "mongo_component_div_on_click_O41XkfEPk50")}>
		</div>;
}, "mongo_component_ouWLj4jA2oI"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/index.tsx\"],\"names\":[],\"mappings\":\";;AAGA,6BAAe,sCAAW;IACzB,QACE,IAAI,mCAAU,IAAM,QAAQ,GAAG,CAAC,uDAAU;EAC3C,EAAE;AAEJ,mCAAG\"}")
== DIAGNOSTICS ==

[]
