optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_default_export_invalid_ident.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

============================= src/components/mongo/404.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_aa6ReVOPyKc = ()=>import("./404.tsx_404_component_aa6ReVOPyKc");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_aa6ReVOPyKc, "404_component_aa6ReVOPyKc"));


None
============================= src/components/mongo/404.tsx_404_component_aa6ReVOPyKc.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./404.tsx");
export const 404_component_aa6ReVOPyKc = ()=>{
	return <div on:click={/*#__PURE__*/ qrl(i_onClick, "component_div_onClick")}>
		</div>;
};


None
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "404_component_aa6ReVOPyKc",
  "entry": null,
  "displayName": "404_component",
  "hash": "aa6ReVOPyKc",
  "canonicalFilename": "404.tsx_404_component_aa6ReVOPyKc",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    150
  ]
}
*/
== DIAGNOSTICS ==

[]
