optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_derived_signals_complext_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<ul id="issue-2800-result">
				{Object.entries(store).map(([key, value]) => (
				<li>
					{key} - {value}
				</li>
				))}
			</ul>
		</>
	);
});

============================= example_derived_signals_complext_children.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export const App = componentQrl(qrl(() => import("./example_derived_signals_complext_children.tsx_App_component_yxEQp0XEDYE.js"), "App_component_yxEQp0XEDYE"));


None
============================= ./example_derived_signals_complext_children.tsx_App_component_yxEQp0XEDYE.js (ENTRY POINT)==

import { _jsxSorted, useStore } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App_component_yxEQp0XEDYE = () => {
	const signal = useSignal(0);
	const store = useStore({});
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("ul", null, { id: "issue-2800-result" }, Object.entries(store).map(([key, value]) => /*#__PURE__*/ _jsxSorted("li", null, null, [
		key,
		"-",
		value
	], 1, null)), 1, null), 3, null);
};


None
/*
{
  "origin": "example_derived_signals_complext_children.tsx",
  "name": "App_component_yxEQp0XEDYE",
  "entry": "entry_segments",
  "displayName": "example_derived_signals_complext_children.tsx_App_component",
  "hash": "yxEQp0XEDYE",
  "canonicalFilename": "example_derived_signals_complext_children.tsx_App_component_yxEQp0XEDYE",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_yxEQp0XEDYE",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
