optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_dev_mode_inlined.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---


import { component$, useStore } from '@qwik.dev/core';

export const App = component$(() => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrlDEV } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrlDEV(()=>{
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff",
        "on:click": /*#__PURE__*/ inlinedQrlDEV(()=>console.log('warn'), "App_component_Cmp_p_on_click_9VylW0qB00s", {
            file: "/user/qwik/src/test.tsx",
            lo: 144,
            hi: 169,
            displayName: "test.tsx_App_component_Cmp_p_on_click"
        })
    }, "Hello Qwik", 3, null, {
        fileName: "test.tsx",
        lineNumber: 7,
        columnNumber: 4
    }), 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
}, "App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 88,
    hi: 200,
    displayName: "test.tsx_App_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,OAAO,MAAM,oBAAM,yCAAW;IAC7B,qBACC,WAAC,+BACA,WAAC;QAAE,OAAM;QAAQ,UAAQ,8BAAE,IAAM,QAAQ,GAAG,CAAC;;;;;;OAAS;;;;;;;;;AAGzD;;;;;IAAG\"}")
== DIAGNOSTICS ==

[]
