optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_explicit_ext_no_transpile.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==


import { component$, $, useStyles$ } from '@qwik.dev/core';

export const App = component$((props) => {
	useStyles$('hola');
	return $(() => (
		<div></div>
	));
});

============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0.tsx");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,OAAO,MAAM,oBAAM,4EAKhB\"}")
============================= test.tsx_App_component_useStyles_t35nSa5UV7U.tsx ==

export const App_component_useStyles_t35nSa5UV7U = 'hola';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mDAIY\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_t35nSa5UV7U",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "t35nSa5UV7U",
  "canonicalFilename": "test.tsx_App_component_useStyles_t35nSa5UV7U",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    118,
    124
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.tsx ==

import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_t35nSa5UV7U = ()=>import("./test.tsx_App_component_useStyles_t35nSa5UV7U.tsx");
const i_w0t0o3QMovU = ()=>import("./test.tsx_App_component_1_w0t0o3QMovU.tsx");
export const App_component_ckEPmXZlub0 = (props)=>{
    useStylesQrl(/*#__PURE__*/ qrl(i_t35nSa5UV7U, "App_component_useStyles_t35nSa5UV7U"));
    return /*#__PURE__*/ qrl(i_w0t0o3QMovU, "App_component_1_w0t0o3QMovU");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAG8B,CAAC;IAC9B;IACA;AAGD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    93,
    165
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.tsx ==

export const App_component_1_w0t0o3QMovU = ()=><div></div>;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"2CAKU,KACP,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    137,
    161
  ]
}
*/
== DIAGNOSTICS ==

[]
